--- a/abcdc/awgn.tex
+++ b/abcdc/awgn.tex
@@ -781,52 +781,51 @@ Then
 \end{array}
 }
 \end{theorem}
-
-\begin{proof}\\
+\begin{proof}
 \begin{enumerate}
 \item ML estimate in ``matched signal" form:
-\begin{eqnarray*}
+\begin{align*}
    \estML[a] 
-     &=& \arg\max_a 
-         \left[ 2\inprod{\fr(t)}{\fs(t;u)}-\norm{\fs(t;\phi)}^2 \right]
-         \hspace{8ex}\mbox{by \prefpp{thm:estML_general}}
-   \\&=& \arg\max_a 
-         \left[ 2\inprod{\fr(t)}{a\lambda(t)}-\norm{a\lambda(t)}^2 \right]
-         \hspace{8ex}\mbox{by hypothesis}
-   \\&=& \arg_a 
-         \left[ \pderiv{}{a}2a\inprod{\fr(t)}{\lambda(t)}-\pderiv{}{a}a^2\norm{\lambda(t)}^2 =0\right]
-   \\&=& \arg_a 
-         \left[ 2\inprod{\fr(t)}{\lambda(t)}-2a\norm{\lambda(t)}^2 =0\right]
-   \\&=& \arg_a 
-         \left[ \inprod{\fr(t)}{\lambda(t)}=a\norm{\lambda(t)}^2 \right]
-   \\&=& \frac{1}{\norm{\lambda(t)}^2} \inprod{\fr(t)}{\lambda(t)}
-\end{eqnarray*}
+     &= \arg\max_a 
+        \left[ 2\inprod{\fr(t)}{\fs(t;u)}-\norm{\fs(t;\phi)}^2 \right]
+     && \text{by \prefpp{thm:estML_general}}
+   \\&= \arg\max_a 
+        \left[ 2\inprod{\fr(t)}{a\lambda(t)}-\norm{a\lambda(t)}^2 \right]
+     && \text{by hypothesis}
+   \\&= \arg_a 
+        \left[ \pderiv{}{a}2a\inprod{\fr(t)}{\lambda(t)}-\pderiv{}{a}a^2\norm{\lambda(t)}^2 =0\right]
+   \\&= \arg_a 
+        \left[ 2\inprod{\fr(t)}{\lambda(t)}-2a\norm{\lambda(t)}^2 =0\right]
+   \\&= \arg_a 
+        \left[ \inprod{\fr(t)}{\lambda(t)}=a\norm{\lambda(t)}^2 \right]
+   \\&= \frac{1}{\norm{\lambda(t)}^2} \inprod{\fr(t)}{\lambda(t)}
+\end{align*}
 
 \item ML estimate in ``spectral decomposition" form:
-\begin{eqnarray*}
+\begin{align*}
    \estML[a] 
-     &=& \arg\min_a 
-         \bp{ \sum_{n=1}^N \bs{\fdotr_n - \fdots_n( a )}^2 }
-         \hspace{4ex} \mbox{by \prefpp{thm:estML_general}}
-   \\&=& \arg_a 
-         \bp{ \pderiv{}{ a }\sum_{n=1}^N \bs{\fdotr_n - \fdots_n( a )}^2=0 }
-   \\&=& \arg_a 
-         \bp{ 2\sum_{n=1}^N \bs{\fdotr_n - \fdots_n( a )}\pderiv{}{ a }\fdots_n( a )=0 }
-   \\&=& \arg_a 
-         \bp{ \sum_{n=1}^N \bs{\fdotr_n - \inprod{ a \lambda(t)}{\psi_n(t)}}\pderiv{}{ a }\inprod{ a \lambda(t)}{\psi_n(t)}=0 }
-   \\&=& \arg_a 
-         \bp{ \sum_{n=1}^N \bs{\fdotr_n -  a \inprod{\lambda(t)}{\psi_n(t)}}\pderiv{}{ a }( a \inprod{\lambda(t)}{\psi_n(t)})=0 }
-   \\&=& \arg_a 
-         \bp{ \sum_{n=1}^N \bs{\fdotr_n -  a \fdotlam_n } \inprod{\lambda(t)}{\psi_n(t)}=0 }
-   \\&=& \arg_a 
-         \bp{ \sum_{n=1}^N \bs{\fdotr_n -  a \fdotlam_n } \fdotlam_n=0 }
-   \\&=& \arg_a 
-         \bp{ \sum_{n=1}^N \fdotr_n\fdotlam_n = \sum_{n=1}^N  a \fdotlam_n^2 }
-   \\&=& \bp{\frac{1}{\sum_{n=1}^N \fdotlam_n^2}} 
-         \sum_{n=1}^N \fdotr_n\fdotlam_n
-   \\&=& \frac{1}{\norm{\lambda(t)}^2}
-         \sum_{n=1}^N \fdotr_n\fdotlam_n
-\end{eqnarray*}
+     &= \arg\min_a 
+        \brp{ \sum_{n=1}^N \brs{\fdotr_n - \fdots_n( a )}^2 }
+     && \text{by \prefpp{thm:estML_general}}
+   \\&= \arg_a 
+        \brp{ \pderiv{}{ a }\sum_{n=1}^N \brs{\fdotr_n - \fdots_n( a )}^2=0 }
+   \\&= \arg_a 
+        \brp{ 2\sum_{n=1}^N \brs{\fdotr_n - \fdots_n( a )}\pderiv{}{ a }\fdots_n( a )=0 }
+   \\&= \arg_a 
+        \brp{ \sum_{n=1}^N \brs{\fdotr_n - \inprod{ a \lambda(t)}{\psi_n(t)}}\pderiv{}{ a }\inprod{ a \lambda(t)}{\psi_n(t)}=0 }
+   \\&= \arg_a 
+        \brp{ \sum_{n=1}^N \brs{\fdotr_n -  a \inprod{\lambda(t)}{\psi_n(t)}}\pderiv{}{ a }( a \inprod{\lambda(t)}{\psi_n(t)})=0 }
+   \\&= \arg_a 
+        \brp{ \sum_{n=1}^N \brs{\fdotr_n -  a \fdotlam_n } \inprod{\lambda(t)}{\psi_n(t)}=0 }
+   \\&= \arg_a 
+        \brp{ \sum_{n=1}^N \brs{\fdotr_n -  a \fdotlam_n } \fdotlam_n=0 }
+   \\&= \arg_a 
+        \brp{ \sum_{n=1}^N \fdotr_n\fdotlam_n = \sum_{n=1}^N  a \fdotlam_n^2 }
+   \\&= \brp{\frac{1}{\sum_{n=1}^N \fdotlam_n^2}} 
+        \sum_{n=1}^N \fdotr_n\fdotlam_n
+   \\&= \frac{1}{\norm{\lambda(t)}^2}
+        \sum_{n=1}^N \fdotr_n\fdotlam_n
+\end{align*}
 
 \item Prove that the estimate $\estML[a]$ is {\bf unbiased}:
 
