--- a/abcdc/mpath.tex
+++ b/abcdc/mpath.tex
@@ -312,7 +312,7 @@ is the autocorrelation function of the impulse response $\fh(\tau;t)$.
 We already have two key characteristics of $\fh(\tau;t)$:
 \begin{enume}
   \item $\fh(\tau;t)$ is uncorrelated with respect to $\tau$
-        (by Proposition~\ref{prop:mp_tau}).\\
+        (by \prefp{prop:mp_tau}).\\
         So we only care about the case $\tau=\tau_1=\tau_2$.
   \item $\fh(\tau;t)$ is WSS with respect to $t$
         (by \prefpp{def:mpath}). \\
@@ -336,7 +336,7 @@ of impulse response $\fh:\R^2\to\R$ such that
 %======================================
 The Fourier transform can operate over $\Rhh(\tau;\delt)$
 with respect to $\tau$, $\delt$, or both to generate three
-new functions $\Rft(f)$, $\Rtf(f)$, and $\Rff(f)$.
+new functions $\mpathRft(f)$, $\mpathRtf(f)$, and $\mpathRff(f)$.
 This provides a total of four equivalent functions for 
 measuring multipath.
 These four functions are formally defined in 
@@ -351,20 +351,20 @@ These four functions are formally defined in
 \index{scattering function                   }
 \index{Doppler function                      }
 %--------------------------------------
-Let $\Rhh:\R^2\to\R$, $\Rft:\R^2\to\R$, $\Rtf:\R^2\to\R$, and 
-$\Rff:\R^2\to\R$ be defined as\\
+Let $\Rhh:\R^2\to\R$, $\mpathRft:\R^2\to\R$, $\mpathRtf:\R^2\to\R$, and 
+$\mpathRff:\R^2\to\R$ be defined as\\
 \defboxp{\begin{tabular}[b]{lp{7cm}lcl}
    1. & autocorrelation function
       & $\Rtt(\tau;\delt)$ &$\eqd$& $\Eb{\fh(\tau;t+\delt)\fh^\ast(\tau;t)}$
 \\
    2. & spaced-frequency spaced-time function
-      & $\Rft(\delf;\delt)$ &$\eqd$& $\opFT_\tau \Rtt(\tau;\delt)$
+      & $\mpathRft(\delf;\delt)$ &$\eqd$& $\opFT_\tau \Rtt(\tau;\delt)$
 \\
    3. & scattering function
-      & $\Rtf(\tau;\lambda)$ &$\eqd$& $\opFT_{\delt} \Rtt(\tau;\delt)$
+      & $\mpathRtf(\tau;\lambda)$ &$\eqd$& $\opFT_{\delt} \Rtt(\tau;\delt)$
 \\
    4. & Doppler function
-      & $\Rff(\delf;\lambda)$ &$\eqd$& $\opFT_\tau\opFT_{\delt} \Rtt(\tau;\delt)$
+      & $\mpathRff(\delf;\lambda)$ &$\eqd$& $\opFT_\tau\opFT_{\delt} \Rtt(\tau;\delt)$
 \end{tabular}
 
 The arguments of these functions are designated as\\
@@ -391,17 +391,17 @@ The arguments of these functions are designated as\\
   \put(- 50, 110){\makebox (100, 80)[b]{function}     }
 
   \put(- 50,-200){\framebox(100,100)   {}                     }
-  \put(- 50,-190){\makebox (100, 80)[t]{$\Rff(\delf;\lambda)$}   }
+  \put(- 50,-190){\makebox (100, 80)[t]{$\mpathRff(\delf;\lambda)$}   }
   \put(- 50,-190){\makebox (100, 80)[c]{doppler}     }
   \put(- 50,-190){\makebox (100, 80)[b]{function}     }
 
   \put(-200,- 50){\framebox(100,100)   {}                     }
-  \put(-200,- 40){\makebox (100, 80)[t]{$\Rft(\delf;\delt)$}   }
+  \put(-200,- 40){\makebox (100, 80)[t]{$\mpathRft(\delf;\delt)$}   }
   \put(-200,- 40){\makebox (100, 80)[c]{spaced-frequency}}
   \put(-200,- 40){\makebox (100, 80)[b]{spaced-time}}
 
   \put( 100,- 50){\framebox(100,100)   {}                     }
-  \put( 100,- 40){\makebox (100, 80)[t]{$\Rtf(\tau;\lambda)$}   }
+  \put( 100,- 40){\makebox (100, 80)[t]{$\mpathRtf(\tau;\lambda)$}   }
   \put( 100,- 40){\makebox (100, 80)[c]{scattering}}
   \put( 100,- 40){\makebox (100, 80)[b]{function}}
 
@@ -430,7 +430,7 @@ The Fourier transform of the random process $\fh(\tau;t)$
 with respect to $\tau$ is therefore a random process and has 
 an autocorrelation function.
 This autocorrelation function is equivalent to 
-the spaced-frequency-spaced-time function $\Rft(\delf;\delt)$
+the spaced-frequency-spaced-time function $\mpathRft(\delf;\delt)$
 as shown next.
 %---------------------------------------
 \begin{proposition}
@@ -441,12 +441,12 @@ such that
               \eqd \int_\tau \fh(\tau;t) e^{-i2\pi f\tau}\dtau.
   \]
 Then
-  \[ \Eb{\Fh(f_1;t+\delt)\Fh^\ast(f_2;t)} = \Rft(\delf;\delt). \]
+  \[ \Eb{\Fh(f_1;t+\delt)\Fh^\ast(f_2;t)} = \mpathRft(\delf;\delt). \]
 \end{proposition}
 \begin{proof}
 \if 0
 \begin{eqnarray*}
-   \Rft(\delf;\delt)
+   \mpathRft(\delf;\delt)
      &=& \opFT_\tau \Rtt(\tau;\delt)
    \\&=& \int_{\tau}\Rtt(\tau;\delt) e^{-i2\pi \delf \tau} \dtau
    \\&=& \int_{\tau}\Eb{\fh(\tau;t+\delt) \fh^\ast(\tau;t) }
@@ -486,7 +486,7 @@ Then
               e^{-i2\pi \delf \tau}
             \dtau
    \\&=& \opFT_\tau \Rtt(\tau;\delt)
-   \\&=& \Rft(\delf;\delt)
+   \\&=& \mpathRft(\delf;\delt)
 \end{eqnarray*}
 %\\ \\
 The following proof fails (diverges).
@@ -510,7 +510,7 @@ Maybe someone can show me what I did wrong:
             e^{-i2\pi\lambda_1(u+\delt)} e^{ i2\pi\lambda_2u} \ddelt \du 
   \\&= \int_u e^{-i2\pi(\lambda_1-\lambda_2)u} \du 
        \int_{\delt}  \Rhh(\tau;\delt) e^{-i2\pi\lambda_1\delt}  \ddelt 
-  \\&= \delta(\lambda_1-\lambda_2)\Rtf(\tau;\lambda_1)
+  \\&= \delta(\lambda_1-\lambda_2)\mpathRtf(\tau;\lambda_1)
 \end{align*}
 \end{proof}
 %======================================
@@ -588,7 +588,7 @@ spaced-frequency correlation function   & Doppler power spectrum
   \put(-100 ,   0 ){\line    (   1,   0){200} }
   \put(   0 ,- 10 ){\line    (   0,   1){110} }
   \put( 110 ,   0 ){\makebox (   0,   0)[l]{$\delf$} }
-  \put(  40 ,  40 ){\makebox (   0,   0)[bl]{$\Rft(\delf;0)$} }
+  \put(  40 ,  40 ){\makebox (   0,   0)[bl]{$\mpathRft(\delf;0)$} }
   \thinlines
   \qbezier( -32,  48)(   0, 144)(  32,  48)
   \qbezier(- 80,   0)( -48,   0)( -32,  48)
@@ -608,7 +608,7 @@ spaced-frequency correlation function   & Doppler power spectrum
   \put(-100 ,   0 ){\line    (   1,   0){200} }
   \put(   0 ,- 10 ){\line    (   0,   1){110} }
   \put( 110 ,   0 ){\makebox (   0,   0)[l]{$\lambda$} }
-  \put(  40 ,  40 ){\makebox (   0,   0)[bl]{$\Rtf(0;\lambda)$} }
+  \put(  40 ,  40 ){\makebox (   0,   0)[bl]{$\mpathRtf(0;\lambda)$} }
   \thinlines
   \qbezier( -32,  48)(   0, 144)(  32,  48)
   \qbezier(- 80,   0)( -48,   0)( -32,  48)
@@ -653,13 +653,13 @@ The following four \hib{profile functions} are defined as \\
       & $\Rtt(\tau;0)$ 
 \\
    2. & spaced-time correlation function
-      & $\Rft(0;\delt)$ 
+      & $\mpathRft(0;\delt)$ 
 \\
    3. & Doppler power spectrum
-      & $\Rtf(0;\lambda)$ 
+      & $\mpathRtf(0;\lambda)$ 
 \\
    4. & spaced-frequency correlation function
-      & $\Rft(\delf;0)$
+      & $\mpathRft(\delf;0)$
 \end{tabular}}
 
 The following four \hib{critical parameters} are defined as\\
@@ -670,15 +670,15 @@ The following four \hib{critical parameters} are defined as\\
 \\
    2. & coherence time
       & $(\delt)_c$
-      & is the width of $\Rft(0;\delt)$ 
+      & is the width of $\mpathRft(0;\delt)$ 
 \\
    3. & Doppler spread
       & $B_d$
-      & is the width of $\Rtf(0;\lambda)$ 
+      & is the width of $\mpathRtf(0;\lambda)$ 
 \\
    4. & coherence bandwidth
       & $(\delf)_c$ 
-      & is the width of $\Rft(\delf;0)$
+      & is the width of $\mpathRft(\delf;0)$
 \end{tabular}}
 \end{definition}
 
@@ -710,25 +710,25 @@ If they are delayed by more than the \hie{multipath spread} $T_m$,
 then they are uncorrelated.
 
 %======================================
-\subsection*{Spaced-time correlation profile $\Rft(0;\delt)$}
+\subsection*{Spaced-time correlation profile $\mpathRft(0;\delt)$}
 %======================================
-The \hie{spaced-time correlation profile} $\Rft(0;\delt)$
+The \hie{spaced-time correlation profile} $\mpathRft(0;\delt)$
 measures the time auto-correlation of a signal traveling through a 
 single path.
 A signal is uncorrelated with a delayed version of itself if the delay 
 is greater than the \hie{coherence time} $(\delt)_c$.
 
 %======================================
-\subsection*{Doppler power spectrum $\Rtf(0;\lambda)$}
+\subsection*{Doppler power spectrum $\mpathRtf(0;\lambda)$}
 %======================================
-The \hie{Doppler power spectrum} $\Rtf(\tau;0)$ 
+The \hie{Doppler power spectrum} $\mpathRtf(\tau;0)$ 
 is a measure of signal power density as a function of $\lambda$.
 
 
 %======================================
-\subsection*{Spaced-frequency correlation function $\Rft(\delf;0)$}
+\subsection*{Spaced-frequency correlation function $\mpathRft(\delf;0)$}
 %======================================
-The \hie{spaced-frequency correlation function} $\Rft(\delf;0)$
+The \hie{spaced-frequency correlation function} $\mpathRft(\delf;0)$
 measures the correlation of two sinusoids. 
 If two sinusoids are separted in fequency by more than the 
 \hie{coherence bandwidth} $(\delf)_c$, then they are uncorrelated.
