--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1896,7 +1896,7 @@
  \newcommand{\mCmm} [0]{{\mathfnct{C}_{\mathsfup{mm}}}}
 
  \newcommand{\su}     {u}
- \newcommand{\sue}    {\hat{su}}
+ \newcommand{\sue}    {\hat{\su}}
  \newcommand{\ue}     {\hat{u}}
  \newcommand{\opSys}  {\opS}
  \newcommand{\opCTi}  {\opC}
