--- a/common/sty/physics.sty
+++ b/common/sty/physics.sty
@@ -38,10 +38,12 @@
 %--------------------------------------
 % Multipath
 %--------------------------------------
-%\newcommand{\Rtt} [0] {\mathrm{R}_\mathrm{hh}}        % time correlation
-%\newcommand{\Rtf} [0] {\mathrm{R}_\mathrm{hh}^\lhd}   % scattering function
-%\newcommand{\Rft} [0] {\mathrm{R}_\mathrm{hh}^\rhd}   % spaced-time spaced-frequency function
-%\newcommand{\Rff} [0] {\mathrm{R}_\mathrm{hh}^{\Join}}% doppler function
+\newcommand{\Rtt} [0] {\mathrm{R}_{\mathrm{hh}}}        % time correlation
+\newcommand{\mpathRtf} [0] {\mathrm{R}_{\mathrm{hh}}^{L}}   % scattering function
+\newcommand{\mpathRft} [0] {\mathrm{R}_{\mathrm{hh}}^{R}}   % spaced-time spaced-frequency function
+%\newcommand{\mpathRtf} [0] {\mathrm{R}_{\mathrm{hh}}^{\lhd}}   % scattering function
+%\newcommand{\mpathRft} [0] {\mathrm{R}_{\mathrm{hh}}^{\rhd}}   % spaced-time spaced-frequency function
+\newcommand{\mpathRff} [0] {\mathrm{R}_{\mathrm{hh}}^{\Join}}% doppler function
 
 %--------------------------------------
 % System parameters
@@ -60,36 +62,27 @@
 %--------------------------------------
 % Filters
 %--------------------------------------
-%20190903%\newcommand{\hh}[1][x]{{\mathrm{h}_\mathsf{#1}}}
-%20190903%\newcommand{\hht}[0]{\hh[t]}
-%20190903%\newcommand{\hhc}[0]{\hh[c]}
-%20190903%\newcommand{\hhr}[0]{\hh[r]}
-%20190903%%\newcommand{\hhcmp}[0]{{\mathrm{h}}}
-%20190903%%\newcommand{\hhcmpf}[0]{\ft{\hhcmp}}  % composite
+\newcommand{\hh} {{\mathrm{h}_{\mathsf{x}}}}
+\newcommand{\hht}{{\mathrm{h}_{\mathsf{t}}}}
+\newcommand{\hhc}{{\mathrm{h}_{\mathsf{c}}}}
+\newcommand{\hhr}{{\mathrm{h}_{\mathsf{r}}}}
+%\newcommand{\hhcmp}[0]{{\mathrm{h}}}
+%\newcommand{\hhcmpf}[0]{\ft{\hhcmp}}  % composite
 
 %--------------------------------------
 % Functions and vectors
 %--------------------------------------
-%20190903% \newcommand{\distsq}[2]{\metricn^2\brp{#1,\,#2}}
-%20190903% \newcommand{\FS}  [1]   {{\breve{\mathrm{#1}}}}
+\newcommand{\distsq}[2]{\metricn^2\brp{#1,\,#2}}
 \newcommand{\delt}[1][t]{{{{\Delta{#1}}}}}
 \newcommand{\delf}[0]   {\delt[f]}
-%20190903% \newcommand{\ue} {\hat{u}}    %
-%20190903% \newcommand{\su}   [1][n] {\seq{u}{#1}}    % 
-%20190903% \newcommand{\sy}   [1][n] {\seq{y}{#1}}    % 
-%20190903% \newcommand{\sa}   [1][n] {\seq{a}{#1}}    % 
-%20190903% \newcommand{\sue}  [1][n] {\seq{\hat{u}}{#1}}    % 
-%20190903% \newcommand{\sae}  [1][n] {\seq{\hat{a}}{#1}}    % 
-%20190903% \newcommand{\fdot}[1]   {{\mathrm{\dot{#1}}}}
-%20190903% \newcommand{\fdotr}[0]{\fdot{r}}
-%20190903% \newcommand{\fdots}[0]{\fdot{s}}
-%20190903% \newcommand{\fdotn}[0]{\fdot{n}}
-%20190903% \newcommand{\fdotlam}[0]{\fdot{\lambda}}
-%20190903% \newcommand{\fn  }[0]{\fnct{n}}
-%20190903%% \newcommand{\fz  }[0]{\fnct{z}}
-%20190903% \newcommand{\Lg  }[0]{\LT{g}}
-%20190903% \newcommand{\step}[0]{{\mu}}
-%        
+%\newcommand{\su}   [1][n] {\seq{u}{#1}}    % 
+\newcommand{\sy}   [1][n] {\seq{y}{#1}}    % 
+\newcommand{\sa}   [1][n] {\seq{a}{#1}}    % 
+%\newcommand{\sue}  [1][n] {\seq{\hat{u}}{#1}}    % 
+\newcommand{\sae}  [1][n] {\seq{\hat{a}}{#1}}    % 
+\newcommand{\Lg}  {\LT{g}}
+\newcommand{\step}{{\mu}}
+
 %--------------------------------------
 % Functionals
 %--------------------------------------
@@ -118,15 +111,6 @@
 %20190903% \newcommand{\opCTi} [0]{(\opC\opT)^{-1} } % inverse operator
 %20190903%% \newcommand{\opR}  [0]{\opX [R]    } % receive
 %20190903% \newcommand{\opRb} [1]{\opXb{R}{#1}}
-
-%--------------------------------------
-% Information Theory
-%--------------------------------------
-%20190903%\newcommand{\iH}[0] {{\mathrm{H}}} % entropy
-%20190903%\newcommand{\iD}[2] {{\mathrm{D}\left(\left.#1\right\|#2\right)}} % relative entropy
-%20190903%\newcommand{\iI}[0] {{\mathrm{I}}} % mutual information
-%20190903%\newcommand{\iC}[0] {{\mathrm{C}}} % channel capacity
-%20190903%\newcommand{\iE}[0] {{\mathrm{E}}} % 
 
 %--------------------------------------
 % Picture boxes
