--- a/abcdc/isi.tex
+++ b/abcdc/isi.tex
@@ -1052,7 +1052,7 @@ Let $\ft{\hhcmp}(f)$ be the Fourier Transform of a function
 $\hhcmp(t)$ and $T\in\R$ a constant.
 Then
 \thmbox{
-   \bs{
+   \brs{
    \hhcmp(nT) =
    \left\{
       \begin{tabular}{lcl}
@@ -1062,7 +1062,7 @@ Then
    \right.
    }
 \iff
-   \bs{
+   \brs{
    \frac{1}{T}\sum_n \ft{\hhcmp}\left(f+ \frac{n}{T} \right)
      = 2e^{-i\pi fT}\cos\left(\pi fT\right).
    }
@@ -1090,7 +1090,7 @@ which states
     && \text{by left hypothesis}
   \\&= 2Te^{-i\pi fT}\left( \frac{1}{2}e^{i\pi fT} + \frac{1}{2}e^{-i\pi fT}  \right)
   \\&= 2Te^{-i\pi fT}\cos\left(\pi fT\right)
-    && \text{by trig. identity (see Appendix \ref{app:trig})}
+    && \text{by \thme{Euler formulas} \prefp{cor:eform}}
 \end{align*}
 
 
@@ -1694,7 +1694,7 @@ in \prefpp{thm:mdb_zeroISI} is met.
 Let $\ft{\hhcmp}(f)$ be the Fourier Transform of a function
 $\hhcmp(t)$ and $T\in\R$ a constant.
 \thmbox{
-   \bs{
+   \brs{
    \hhcmp(nT) =
    \left\{
       \begin{array}{lcl}
@@ -1705,7 +1705,7 @@ $\hhcmp(t)$ and $T\in\R$ a constant.
    \right.
    }
 \iff
-   \bs{
+   \brs{
    \frac{1}{T}\sum_n \ft{\hhcmp}\left(f+ \frac{n}{T} \right)
      = i2\sin(2\pi fT).
    }
@@ -1713,11 +1713,10 @@ $\hhcmp(t)$ and $T\in\R$ a constant.
 \end{theorem}
 \begin{proof}
 This theorem is easily proven using the
-{\em Inverse Poisson's Summation Formula}(IPSF)
-(\prefpp{thm:ipsf} page~\pageref{thm:ipsf})
+\thme{Inverse Poisson's Summation Formula} (IPSF) \ifsxref{transop}{thm:ipsf}
 which states
 \begin{eqnarray*}
-   \sum_n \ft{\hhcmp}\left( f+ \frac{n}{T} \right)
+   \sum_{n\in\Z} \ft{\hhcmp}\left( f+ \frac{n}{T} \right)
       &=& T \sum_n \hhcmp(nT) e^{-i2\pi fnT}
 \end{eqnarray*}
 
@@ -1739,7 +1738,7 @@ which states
        && \text{by left hypothesis}
      \\&= T\left[e^{i2\pi fT} -e^{-i2\pi fT} \right]
      \\&= i2T \sin( 2\pi fT )
-       && \text{by trig. identity (see Appendix \ref{app:trig})}
+       && \text{by \thme{Euler formulas} \prefp{cor:eform}}
 \end{align*}
 
 \item ``If" case ($\impliedby$):
