--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -364,12 +364,12 @@
   }
 
 @book{cover,
+  isbn         = {0471062596},
   author       = {T.M. Cover and Joy A. Thomas},
   title        = {Elements of Information Theory},
   publisher    = {John Wiley \& Sons, Inc.},
   address      = {New York},
   year         = {1991},
-  isbn         = {0-471-06259-6},
   urlw         = {http://www.worldcat.org/isbn/0471062596},
   url          = {http://www.amazon.com/dp/0471062596},
   urlx         = {http://www-isl.stanford.edu/~jat/eit2/index.shtml},
@@ -738,6 +738,15 @@
   url          = {https://www.researchgate.net/publication/283994172},
   }
 
+@book{mik,
+  isbn         = {0070400512},
+  author       = {Dimitris G. Manolakis and Vinay K. Ingle and Stephen M. Kogon},
+  title        = {Statistical and Adaptive Signal Processing},
+  publisher    = {Mc-Graw Hill},
+  address      = {Boston},
+  year         = {2000},
+  }
+
 @book{manolakis2005,
   isbn10       = {1580536107},
   isbn         = {9781580536103},
@@ -1084,6 +1093,16 @@
   pages        = {176},
   url          = {http://books.google.com/books?vid=ISBN9780412246203},
   urlw         = {http://www.worldcat.org/isbn/9780412246203},
+  }
+
+@book{srv,
+  isbn         = {013125295X},
+  author       = {Mandyam D. Srinath and P.K. Rajasekaran and R. Viswanathan},
+  title        = {Introduction to Statistical Signal Processing with Applications},
+  publisher    = {Prentice Hall Inc},
+  address      = {Upper Saddle River},
+  year         = {1996},
+  url          = {http://engr.smu.edu/ee/mds/},
   }
 
 @book{stuart1991,
