some narrowband proof justifications

--- a/common/com_channel.tex
+++ b/common/com_channel.tex
@@ -148,7 +148,7 @@ These processes include:
 \begin{tabular}{cl|ll}
              & Process          & Example             \\
    \hline
-   $\imark$ & electromagnetic waves & free space, air    &\\% (see \prefpp{app:em})  \\
+   $\imark$ & electromagnetic waves & free space, air    & \ifxref{em}{app:em}  \\
    $\imark$ & acoustic waves        & water, soil         \\
    $\imark$ & electric field potential (voltage)  & wire                \\
    $\imark$ & light            & fiber optic cable   \\
