--- a/common/narrowband.tex
+++ b/common/narrowband.tex
@@ -77,7 +77,7 @@ $\opSys$ is a {\bf narrowband system}.
     \put(   0,   0){\vector(1,1){80} }
     \qbezier[16](80, 0)(80,40)(80,80)
     \qbezier[16]( 0,80)(40,80)(80,80)
-  
+
     \put( 80,-5){\line(0,1){10} }
     \put(-5, 80){\line(1,0){10} }
     \put( 80,-10){\makebox(0,0)[t ]{$\fp(t)$}}
@@ -171,7 +171,7 @@ the three forms given in \prefpp{def:canforms} are equivalent and
   \intertext{Proof that $(2) \iff (3)$: }
   \fx(t)
     &= \fp(t)\cos[2\pi f_c t] -\fq(t)\sin[2\pi f_c t]
-  \\&= \Re\left( [\fp(t)+i\fq(t)][\cos(2\pi f_c t) + i\sin(2\pi f_c t)]\right)
+  \\&= \Real\left( [\fp(t)+i\fq(t)][\cos(2\pi f_c t) + i\sin(2\pi f_c t)]\right)
   \\&= \Reb{s_l(t)e^{i2\pi f_c t}}.
 \end{align*}
 
@@ -305,56 +305,6 @@ $\Fx(f) =  \Fx^\ast(-f)$.
    }
 \end{figure}
 
-%---------------------------------------
-\begin{theorem}
-\label{sthm:FTreal}
-%---------------------------------------
-For any real valued function $\fx:\R\to\R$ with Fourier transform
-$\Fx:\R\to\C$
-\footnote{{\em Fourier transform of real-valued function}:
-  see also \prefpp{thm:FTreal} \prefpo{thm:FTreal}
-  }
-\thmbox{
-  \brb{\begin{array}{M}
-    $\fx$ is \propb{real-valued}
-  \end{array}}
-  \implies
-  \brb{\begin{array}{FrcllD}
-      (1). & \Fx(f)       &=& \Fx^\ast(-f)    & \text{ (hermitian symmetric )} & and 
-    \\(2). & \Reb{\Fx(f)} &=& \Reb{\Fx(-f)}   & \text{ (symmetric           )} & and 
-    \\(3). & \Imb{\Fx(f)} &=& -\Imb{\Fx(-f)}  & \text{ (anti-symmetric      )} & and 
-    \\(4). & \abs{\Fx(f)}     &=& |\Fx(-f)|       & \text{ (symmetric       )} & and
-    \\(5). & \angle\Fx(f) &=& -\angle\Fx(-f)  & \text{ (anti-symmetric      )} &
-  \end{array}}
-  }
-\end{theorem}
-\begin{proof}
-\[\begin{array}{*{10}{l}}
-   \Fx(f)
-     &\eqd& [\opFT{\fx(t)}](f)
-     &\eqd& \inprod{\fx(t)}{e^{i2\pi ft}}
-     &=&     \inprod{\fx(t)}{e^{i2\pi(-f)t}}^\ast
-     &\eqd& \Fx^\ast(-f)
-\\
-   \Reb{\Fx(f)}
-     &=& \Reb{\Fx^\ast(-f)}
-     &=& \Reb{\Fx(-f)}
-\\
-   \Imb{\Fx(f)}
-     &=& \Imb{\Fx^\ast(-f)}
-     &=& -\Imb{\Fx(-f)}
-\\
-   |\Fx(f)|
-     &=& |\Fx^\ast(-f)|
-     &=& |\Fx(-f)|
-\\
-   \angle\Fx(f)
-     &=& \angle\Fx^\ast(-f)
-     &=& -\angle\Fx(-f)
-\end{array}\]
-\end{proof}
-
-
 %=======================================
 \section{Lowpass representation}
 \index{narrowband!lowpass representation}
@@ -411,82 +361,105 @@ Then
 }
 \end{theorem}
 \begin{proof}
-\begin{align*}
-   \opE{\fx(t)}
-        &\eqd \norm{\fx(t)}^2
-      \\&=    \norm{\Reb{ \fx_l(t)e^{j2\pi f_ct}}}^2
-      \\&=    \norm{\frac{1}{2}\fx_l(t)e^{j2\pi f_ct} + \frac{1}{2}\fx_l^\ast(t)e^{-j2\pi f_ct} }^2
-      \\&=    \norm{ \frac{1}{2}\fx_l(t)e^{j2\pi f_ct} }^2
-         +    \norm{ \frac{1}{2}\fx_l^\ast(t)e^{-j2\pi f_ct} }^2
-         +    2\Reb{\inprod{\frac{1}{2}\fx_l(t)e^{j2\pi f_ct}}{\frac{1}{2}\fx_l^\ast(t)e^{-j2\pi f_ct}}}
-      \\&=    \frac{1}{4}\norm{ \fx_l(t) }^2
-         +    \frac{1}{4}\norm{ \fx_l(t) }^2
-         +    \frac{1}{2}\Reb{\inprod{\fx_l(t)e^{j2\pi f_ct}}{\fx_l^\ast(t)e^{-j2\pi f_ct}}}
-      \\&\eqa \frac{1}{2}\norm{ \fx_l(t) }^2
-      \\&\eqd \frac{1}{2}\opE{\fx_l(t)}
-\\ \\
-   \Fx(f)
-        &\eqd [\opFT{\fx(t)}](f)
-      \\&\eqd \inprod{\fx(t)}{e^{j2\pi ft}}
-      \\&=    \inprod{\Reb{ \fx_l(t)e^{j2\pi f_ct}}}
-                           {e^{j2\pi ft}}
-      \\&=    \inprod{\frac{1}{2}\left[ \fx_l(t)e^{j2\pi f_ct} + \fx_l^\ast(t)e^{-j2\pi f_ct}   \right]}
-                           {e^{j2\pi ft}}
-      \\&=    \frac{1}{2} \inprod{\fx_l(t)     e^{ j2\pi f_ct}}{ e^{j2\pi ft}}
-            + \frac{1}{2} \inprod{\fx_l^\ast(t)e^{-j2\pi f_ct}}{ e^{j2\pi ft}}
-      \\&=    \frac{1}{2} \int_t  \fx_l(t)e^{-j2\pi(f-f_c)t}  \; dt
-         +    \frac{1}{2} \left[ \int_t  \fx_l(t) e^{-j2\pi(- f-f_c)t} \; dt \right]^\ast
-      \\&=    \frac{1}{2} \inprod{\fx_l(t)}{e^{j2\pi(f-f_c)t}}
-         +    \frac{1}{2} \inprod{\fx_l(t)}{e^{j2\pi(- f-f_c)t}}^\ast
-      \\&\eqd \frac{1}{2}\Fx_l(f-f_c) + \frac{1}{2}\Fx_l^\ast(-f-f_c)
-\\ \\
-   \Reb{\Fx(f)}
-     &= \Reb{\frac{1}{2}\Fx_l(f-f_c) + \frac{1}{2}\Fx_l^\ast(-f-f_c)}
-   \\&= \frac{1}{2}\Reb{\Fx_l(f-f_c)} + \frac{1}{2}\Reb{\Fx_l^\ast(-f-f_c)}
-   \\&= \frac{1}{2}\Reb{\Fx_l(f-f_c)} + \frac{1}{2}\Reb{\Fx_l(-f-f_c)}
-\\ \\
-   \Imb{\Fx(f)}
-     &= \Imb{\frac{1}{2}\Fx_l(f-f_c) + \frac{1}{2}\Fx_l^\ast(-f-f_c)}
-   \\&= \frac{1}{2}\Imb{\Fx_l(f-f_c)} + \frac{1}{2}\Imb{\Fx_l^\ast(-f-f_c)}
-   \\&= \frac{1}{2}\Imb{\Fx_l(f-f_c)} - \frac{1}{2}\Imb{\Fx_l(-f-f_c)}
-\\ \\
-   |\Fx(f)|^2
-     &= \left| \frac{1}{2}\Fx_l(f-f_c) + \frac{1}{2}\Fx_l^\ast(-f-f_c) \right|^2
-   \\&= \frac{1}{4}
-        \left[\Fx_l(f-f_c) + \frac{1}{2}\Fx_l^\ast(-f-f_c) \right]
-        \left[\Fx_l(f-f_c) + \frac{1}{2}\Fx_l^\ast(-f-f_c) \right]^\ast
-   \\&= \frac{1}{4} \left[
-        \Fx_l     ( f-f_c) \Fx_l^\ast( f-f_c) +
-        \Fx_l     ( f-f_c) \Fx_l     (-f-f_c) +
-        \Fx_l^\ast(-f-f_c) \Fx_l^\ast( f-f_c) +
-        \Fx_l^\ast(-f-f_c) \Fx_l     (-f-f_c)
-        \right]
-   \\&= \frac{1}{4} \left[
-        |\Fx_l( f-f_c)|^2 +
-        2\Reb{\Fx_l     ( f-f_c) \Fx_l     (-f-f_c)} +
-        |\Fx_l^\ast(-f-f_c)|^2
-        \right]
-   \\&= \frac{1}{4} \left[
-        |\Fx_l( f-f_c)|^2 + |\Fx_l(-f-f_c)|^2 + 0
-        \right]
-\\ \\
-   \angle\Fx(f)
-     &= \angle\left[ \frac{1}{2}\Fx_l(f-f_c) + \frac{1}{2}\Fx_l^\ast(-f-f_c) \right]
-   \\&= \angle\left[ \Fx_l(f-f_c) + \Fx_l^\ast(-f-f_c) \right]
-   \\&= \atan\frac{\Imb{\Fx_l(f-f_c) + \Fx_l^\ast(-f-f_c) }}
-                  {\Reb{\Fx_l(f-f_c) + \Fx_l^\ast(-f-f_c) }}
-   \\&= \atan\frac{\Imb{\Fx_l(f-f_c)} + \Imb{\Fx_l^\ast(-f-f_c) }}
-                  {\Reb{\Fx_l(f-f_c)} + \Reb{\Fx_l^\ast(-f-f_c) }}
-   \\&= \atan\frac{\Imb{\Fx_l(f-f_c)} - \Imb{\Fx_l(-f-f_c) }}
-                  {\Reb{\Fx_l(f-f_c)} + \Reb{\Fx_l(-f-f_c) }}
-   \\&= \left\{\begin{array}{rl}
-         \angle\Fx_l(f-f_c) &:f\eqa +f_c \\
-        -\angle\Fx_l(f+f_c) &:f\eqa -f_c
-        \end{array}\right.
-\end{align*}
+\begin{enumerate}
+  \item Proof that $\opE\fx(t)=\frac{1}{2}\opE\fx_l(t)$:
+    \begin{align*}
+       \opE{\fx(t)}
+            &\eqd \norm{\fx(t)}^2
+          \\&=    \norm{\Reb{ \fx_l(t)e^{j2\pi f_ct}}}^2
+          \\&=    \norm{\frac{1}{2}\fx_l(t)e^{j2\pi f_ct} + \frac{1}{2}\fx_l^\ast(t)e^{-j2\pi f_ct} }^2
+            && \text{by \thme{Euler formulas}}
+            && \text{\xref{cor:eform}}
+          \\&= \mathrlap{   \norm{ \frac{1}{2}\fx_l(t)e^{j2\pi f_ct} }^2
+             +    \norm{ \frac{1}{2}\fx_l^\ast(t)e^{-j2\pi f_ct} }^2
+             +    2\Reb{\inprod{\frac{1}{2}\fx_l(t)e^{j2\pi f_ct}}{\frac{1}{2}\fx_l^\ast(t)e^{-j2\pi f_ct}}}
+            \quad\text{by \thme{Polar Identity}}
+                     \ifsxref{vsinprod}{lem:polarid}}
+          \\&=    \frac{1}{4}\norm{ \fx_l(t) }^2
+             +    \frac{1}{4}\norm{ \fx_l(t) }^2
+             +    \frac{1}{2}\mcom{\Reb{\inprod{\fx_l(t)e^{j2\pi f_ct}}{\fx_l^\ast(t)e^{-j2\pi f_ct}}}}{$\eqa0$ after \ope{low-pass filtering}}
+          \\&\eqa \frac{1}{2}\norm{ \fx_l(t) }^2
+          \\&\eqd \frac{1}{2}\opE{\fx_l(t)}
+    \end{align*}
+
+  \item lemma: $\Fx(f)=\frac{1}{2}\Fx_l(f-f_c) + \frac{1}{2}\Fx_l^\ast(-f-f_c)$. Proof: \label{ilem:xxl}
+    \begin{align*}
+      \boxed{\Fx(f)}
+           &\eqd [\opFT{\fx(t)}](f)
+           && \text{by definition of $\Fx(f)$}
+         \\&\eqd \inprod{\fx(t)}{e^{j2\pi ft}}
+           && \text{by definition of \ope{Fourier Transform}}
+         \\&\eqd \inprod{\Reb{ \fx_l(t)e^{j2\pi f_ct}}}
+                              {e^{j2\pi ft}}
+           && \text{by definition of \fncte{complex envelope} $\fx_l(t)$}
+         \\&=    \inprod{\frac{1}{2}\left[ \fx_l(t)e^{j2\pi f_ct} + \fx_l^\ast(t)e^{-j2\pi f_ct}   \right]}
+                              {e^{j2\pi ft}}
+            && \text{by \thme{Euler formulas} 
+                     \xref{cor:eform}}
+         \\&=    \frac{1}{2} \inprod{\fx_l(t)     e^{ j2\pi f_ct}}{ e^{j2\pi ft}}
+               + \frac{1}{2} \inprod{\fx_l^\ast(t)e^{-j2\pi f_ct}}{ e^{j2\pi ft}}
+           && \text{by \prope{additive} property of $\inprodn$}
+           && \text{\ifxref{vsinprod}{def:inprod}}
+         \\&\eqd \frac{1}{2} \int_{t\in\R}  \fx_l(t)e^{-j2\pi(f-f_c)t} \dt
+            +    \frac{1}{2} \left[ \int_{t\in\R}  \fx_l(t) e^{-j2\pi(- f-f_c)t}  \dt \right]^\ast
+           && \text{by definition of $\inprodn$}
+         \\&\eqd \boxed{\frac{1}{2}\Fx_l(f-f_c) + \frac{1}{2}\Fx_l^\ast(-f-f_c)}
+           && \text{by definition of \ope{Fourier Transform}}
+    \end{align*}
+
+  \item 
+    \begin{align*}
+       \Reb{\Fx(f)}
+         &= \Reb{\frac{1}{2}\Fx_l(f-f_c) + \frac{1}{2}\Fx_l^\ast(-f-f_c)}
+         && \text{by \pref{ilem:xxl}}
+       \\&= \frac{1}{2}\Reb{\Fx_l(f-f_c)} + \frac{1}{2}\Reb{\Fx_l^\ast(-f-f_c)}
+       \\&= \frac{1}{2}\Reb{\Fx_l(f-f_c)} + \frac{1}{2}\Reb{\Fx_l(-f-f_c)}
+       \\
+       \Imb{\Fx(f)}
+         &= \Imb{\frac{1}{2}\Fx_l(f-f_c) + \frac{1}{2}\Fx_l^\ast(-f-f_c)}
+         && \text{by \pref{ilem:xxl}}
+       \\&= \frac{1}{2}\Imb{\Fx_l(f-f_c)} + \frac{1}{2}\Imb{\Fx_l^\ast(-f-f_c)}
+       \\&= \frac{1}{2}\Imb{\Fx_l(f-f_c)} - \frac{1}{2}\Imb{\Fx_l(-f-f_c)}
+       \\
+       \abs{\Fx(f)}^2
+         &= \left| \frac{1}{2}\Fx_l(f-f_c) + \frac{1}{2}\Fx_l^\ast(-f-f_c) \right|^2
+         && \text{by \pref{ilem:xxl}}
+       \\&= \frac{1}{4}
+            \left[\Fx_l(f-f_c) + \frac{1}{2}\Fx_l^\ast(-f-f_c) \right]
+            \left[\Fx_l(f-f_c) + \frac{1}{2}\Fx_l^\ast(-f-f_c) \right]^\ast
+       \\&=\frac{1}{4} \Big[
+            \Fx_l     ( f-f_c) \Fx_l^\ast( f-f_c) +
+            \Fx_l     ( f-f_c) \Fx_l     (-f-f_c) +
+       \\&\qquad \Fx_l^\ast(-f-f_c) \Fx_l^\ast( f-f_c) +
+            \Fx_l^\ast(-f-f_c) \Fx_l     (-f-f_c)
+            \Big]
+       \\&= \frac{1}{4} \brs{
+            \abs{\Fx_l( f-f_c)}^2 +
+            2\Reb{\Fx_l     ( f-f_c) \Fx_l     (-f-f_c)} +
+            \abs{\Fx_l^\ast(-f-f_c)}^2
+            }
+       \\&= \frac{1}{4} \brs{
+            \abs{\Fx_l( f-f_c)}^2 + \abs{\Fx_l(-f-f_c)}^2 + 0
+            }
+       \\
+       \angle\Fx(f)
+         &= \angle\left[ \frac{1}{2}\Fx_l(f-f_c) + \frac{1}{2}\Fx_l^\ast(-f-f_c) \right]
+       \\&= \angle\left[ \Fx_l(f-f_c) + \Fx_l^\ast(-f-f_c) \right]
+       \\&= \atan\frac{\Imb{\Fx_l(f-f_c) + \Fx_l^\ast(-f-f_c) }}
+                      {\Reb{\Fx_l(f-f_c) + \Fx_l^\ast(-f-f_c) }}
+         && \text{by definition of $\angle$}
+        %&& \text{by defs. of $\Real$ and $\Imag$ \ifsxref{normalg}{def:Re}}
+       \\&= \atan\frac{\Imb{\Fx_l(f-f_c)} + \Imb{\Fx_l^\ast(-f-f_c) }}
+                      {\Reb{\Fx_l(f-f_c)} + \Reb{\Fx_l^\ast(-f-f_c) }}
+       \\&= \atan\frac{\Imb{\Fx_l(f-f_c)} - \Imb{\Fx_l(-f-f_c) }}
+                      {\Reb{\Fx_l(f-f_c)} + \Reb{\Fx_l(-f-f_c) }}
+       \\&= \left\{\begin{array}{rl}
+             \angle\Fx_l(f-f_c) &:f\eqa +f_c \\
+            -\angle\Fx_l(f+f_c) &:f\eqa -f_c
+            \end{array}\right.
+    \end{align*}
+\end{enumerate}
 \end{proof}
-
-
 
 %---------------------------------------
 \begin{theorem}{\bf Lowpass LTI theorem.}
@@ -509,10 +482,10 @@ Then
         and the Fourier transform $\Fy:\R\to\C$.
 \end{enume}
 Then
-\formbox{
+\thmbox{
 \begin{array}{rcl}
   \fy_l(t) &=& \frac{1}{2} \fh_l(t) \conv \fx_l(t) \\
-  \Fy_l(f) &=& \frac{1}{2} \Fh_l(f)       \Fx_l(f).
+  \Fy_l(f) &=& \frac{1}{2} \Fh_l(f)       \Fx_l(f)
 \end{array}
 }
 \end{theorem}
@@ -575,11 +548,11 @@ three canonical forms presented in \prefpp{def:canforms}
 (\prefpo{def:canforms}):
 \begin{align*}
    \fn(t)
-     &= \fa(t)\cos[2\pi f_ct + \theta(t)]              
+     &= \fa(t)\cos[2\pi f_ct + \theta(t)]
      && \text{(amplitude and phase)}
-   \\&= \fp(t)\cos(2\pi f_ct) - \fq(t) \sin(2\pi f_c t)  
+   \\&= \fp(t)\cos(2\pi f_ct) - \fq(t) \sin(2\pi f_c t)
      && \text{(quadrature)}
-   \\&= \Re\left(\fn_l(t)e^{j2\pi f_ct}\right)                 
+   \\&= \Real\left(\fn_l(t)e^{j2\pi f_ct}\right)
      && \text{(complex envelope).}
 \end{align*}
 
