--- a/common/sty/switches.sty
+++ b/common/sty/switches.sty
@@ -56,6 +56,7 @@
 \newboolean{convex}
 \newboolean{dsp}
 \newboolean{dtft}
+\newboolean{em}
 \newboolean{estimate}
 \newboolean{frames}
 \newboolean{found}
@@ -73,7 +74,6 @@
 \newboolean{interpo}
 \newboolean{intro}
 \newboolean{lattice}
-\newboolean{lattice_old}
 \newboolean{latb}
 \newboolean{latc}
 \newboolean{latd}
