revised motivation for complex-valued random sequences

--- a/common/randseq.tex
+++ b/common/randseq.tex
@@ -205,13 +205,15 @@ In total, there are $2\times2\times2=8$ different ways to define $\Rxy(m)$.\foot
 and $\Rxx(m)$ involve complex numbers. 
 This may seem curious when typical ADCs provide real-valued sequences.
 Note however that complex-valued sequences often come up in signal processing due to 
-two common situations:\footnote{
-  \citerpg{marple1987}{?}{9780132141499},
-  \citerppgc{marple2019}{48}{50}{9780486780528}{\textsection ``2.12 Extra: Source of Complex-Valued Signals"}
+some common system architectures:\footnote{
+  \citerppgc{marple1987}{51}{53}{9780132141499}{{\scshape``Appendix 2.A Source of Complex-Valued Signals"}},
+  \citerppgc{marple2019}{48}{50}{9780486780528}{\textsection ``2.12 Extra: Source of Complex-Valued Signals"},
+  \citerc{greenhoe_abcdc}{Chapter 2: Narrowband Signals}
   }
 \begin{enume}
   \item The presence of an \ope{FFT} operator in the signal processing path
-  \item communications channel processing involving phase discrimination (e.g. PSK and QAM).
+  \item The \fncte{complex envelope} $\fx_l(t)$ of a modulated \prope{narrowband} communications signal $\fx(t)$.
+  \item Communications channel processing involving phase discrimination (e.g. PSK and QAM).
 \end{enume}
 \end{remark}
 
