--- a/common/bib/digcom.bib
+++ b/common/bib/digcom.bib
@@ -269,9 +269,28 @@
   urla         = {http://www.amazon.com/dp/0471384569},
   }
 
+@book{greenhoe_abcdc,
+  title        = {A Book Concerning Digital Communications},
+  author       = {Daniel J. Greenhoe},
+  series       = {Signal Processing ABCs},
+  volume       = {4},
+  url          = {https://github.com/dgreenhoe/pdfs/blob/master/abcdc.pdf},
+  year         = {2019},
+  }
+
+@book{greenhoe_abcdsp,
+  title        = {A Book Concerning Digital Signal Processing},
+  author       = {Daniel J. Greenhoe},
+  series       = {Signal Processing ABCs},
+  volume       = {1},
+  url          = {https://github.com/dgreenhoe/pdfs/blob/master/abcdsp.pdf},
+  year         = {2019},
+  }
+
 @book{greenhoe2016abcssp,
   author       = {Daniel J. Greenhoe},
   title        = {A Book Concerning Symbolic Sequence Processing},
+  volume       = {3},
   year         = {2016},
   month        = {July},
   edition      = {version 0.50},
