clean-up distorted-frequency.tex. bring morph.tex online

--- a/common/morph.tex
+++ b/common/morph.tex
@@ -74,8 +74,8 @@ Let $\setX$ be a set and $\opI$ be the identity operator on $\setX$.
 %---------------------------------------
 \begin{definition}
 \citetbl{
-  %\citepg{pitas1991}{159}{0792390490}\\
-  \citerpg{matheron1975}{17}{0471576212} \\
+  %\citepg{pitas1991}{159}{0792390490},
+  \citerpg{matheron1975}{17}{0471576212},
   \citerpg{lay1982}{7}{0471095842}
   }
 \label{def:mph_add}
@@ -100,7 +100,9 @@ Minkowski addition and Minkowski subtraction.
 %---------------------------------------
 \begin{theorem}[de Morgan relations]
 \label{thm:mph_addsub}
-\citepg{pitas1991}{159}{0792390490}
+\footnote{
+  \citerpg{pitas1991}{159}{0792390490}
+  }
 %---------------------------------------
 Let $\opair{\setX}{+}$ be a group with
 Minokowski addition    operator $\oplus:\setX^2\to\setX$ and
@@ -145,8 +147,8 @@ Minokowski subtraction operator $\ominus:\setX^2\to\setX$.
 %---------------------------------------
 \begin{example}[Translation on groups]
 \citetbl{
-  \citerppg{matheron1975}{16}{17}{0471576212} \\
-  \citerpg{pitas1991}{159}{0792390490}\\
+  \citerppg{matheron1975}{16}{17}{0471576212},
+  \citerpg{pitas1991}{159}{0792390490},
   \citerpg{lay1982}{7}{0471095842}
   }
 \label{ex:mph_group}
@@ -245,15 +247,6 @@ Let $\oplus$ be the Minkowski addition operator defined in terms of the
 %    && \text{by de Morgan's law \prefpo{thm:set_demorgan}}
 \end{align*}
 \end{proof}
-
-
-
-
-
-
-
-
-
 
 \begin{figure}[ht]
 \begin{center}%
@@ -511,22 +504,15 @@ These relationships are illustrated in \prefpp{fig:mph_T}.
 Two more examples are illustrated in \prefpp{fig:mph_circle+square}.
 \end{example}
 
-
-
-
-
-
-
-
 %=======================================
 \subsection{Additive properties}
 %=======================================
-
-
 %---------------------------------------
 \begin{theorem}
 \label{thm:mph_add}
-\citeppg{pitas1991}{163}{164}{0792390490}
+\footnote{
+  \citerppg{pitas1991}{163}{164}{0792390490}
+  }
 %---------------------------------------
 Let $\opair{\setX}{+}$ be a group with with Minokowski addition operator $\oplus:\setX^2\to\setX$.
 \thmbox{\begin{array}{rcl>{\qquad}C>{\qquad}D}
@@ -616,11 +602,12 @@ Let $\opair{\setX}{+}$ be a group with with Minokowski addition operator $\oplus
 \end{align*}
 \end{proof}
 
-
 %---------------------------------------
 \begin{theorem}
 \label{thm:mph_add_distrib}
-\citepg{pitas1991}{163}{0792390490}
+\footnote{
+  \citerpg{pitas1991}{163}{0792390490}
+  }
 %---------------------------------------
 Let $\opair{\setX}{+}$ be a group with with Minokowski addition operator $\oplus:\setX^2\to\setX$.
 \thmbox{\begin{array}{rcl>{\qquad}C>{\qquad}D}
@@ -683,19 +670,15 @@ Let $\opair{\setX}{+}$ be a group with with Minokowski addition operator $\oplus
 \end{align*}
 \end{proof}
 
-
-
-
-
 %=======================================
 \subsection{Subtractive properties}
 %=======================================
-
-
 %---------------------------------------
 \begin{theorem}
 \label{thm:mph_sub}
-\citeppg{pitas1991}{164}{165}{0792390490}
+\footnote{
+  \citerppg{pitas1991}{164}{165}{0792390490}
+  }
 %---------------------------------------
 Let $\opair{\setX}{+}$ be a group with with Minokowski subtraction operator $\ominus:\setX^2\to\setX$.
 \thmbox{\begin{array}{rcl>{\qquad}C>{\qquad}D}
@@ -762,12 +745,12 @@ Let $\opair{\setX}{+}$ be a group with with Minokowski subtraction operator $\om
 \end{align*}
 \end{proof}
 
-
-
 %---------------------------------------
 \begin{theorem}
 \label{thm:mph_sub_distrib}
-\citepg{pitas1991}{165}{0792390490}
+\footnote{
+  \citerpg{pitas1991}{165}{0792390490}
+  }
 %---------------------------------------
 Let $\opair{\setX}{+}$ be a group with with Minokowski subtraction operator
 $\ominus:\setX^2\to\setX$.
@@ -871,11 +854,12 @@ $\ominus:\setX^2\to\setX$.
 \end{align*}
 \end{proof}
 
-
 %---------------------------------------
 \begin{theorem}
 \label{thm:mph_addsub_distrib}
-\citepg{pitas1991}{166}{0792390490}
+\footnote{
+  \citerpg{pitas1991}{166}{0792390490}
+  }
 %---------------------------------------
 Let $\opair{\setX}{+}$ be a group with with
 Minokowski addition    operator $\oplus:\setX^2\to\setX$   and
@@ -929,17 +913,16 @@ Minokowski subtraction operator $\ominus:\setX^2\to\setX$.
 \end{align*}
 \end{proof}
 
-
-
-
 %=======================================
 \section{Operations}
 %=======================================
 %---------------------------------------
 \begin{definition}
 \label{def:mph_sym}
-%\citeppg{pitas1991}{158}{159}{0792390490}
-\citepg{matheron1975}{17}{0471576212}
+\footnote{
+  %\citeppg{pitas1991}{158}{159}{0792390490}
+  \citerpg{matheron1975}{17}{0471576212}
+  }
 \index{set!symmetric}
 %---------------------------------------
 Let $\opair{\setX}{+}$ be a group.
@@ -952,7 +935,9 @@ Let $\opair{\setX}{+}$ be a group.
 
 %---------------------------------------
 \begin{definition}
-\citepg{pitas1991}{161}{0792390490}
+\footnote{
+  \citerpg{pitas1991}{161}{0792390490}
+  }
 \index[xsym]{$\check{D}$}
 %---------------------------------------
 Let $\opair{\setX}{+}$ be a group with
@@ -974,8 +959,10 @@ $D^s$ be the symmetric set of set $D$.
 
 %---------------------------------------
 \begin{definition}
-%\citepg{pitas1991}{167}{0792390490}
-\citepg{serra1982}{50}{0126372403}
+\footnote{
+  %\citerpg{pitas1991}{167}{0792390490}
+  \citerpg{serra1982}{50}{0126372403}
+  }
 \label{def:mph_open}
 \label{def:mph_close}
 %---------------------------------------
@@ -994,12 +981,13 @@ $\setB^s$ be the symmetric set of a set $\setB$.
 \end{array}}
 \end{definition}
 
-
 %---------------------------------------
 \begin{theorem}
 \label{thm:mph_open_close}
-%\citepg{pitas1991}{167}{0792390490}
-\citepg{serra1982}{51}{0126372403}
+\footnote{
+  %\citerpg{pitas1991}{167}{0792390490},
+  \citerpg{serra1982}{51}{0126372403}
+  }
 %---------------------------------------
 Let $\opair{\setX}{+}$ be a group with
 $\setA_\setB$ representing the opening of a set $\setA$ with respect to a set $\setB$ and
@@ -1048,9 +1036,6 @@ $\setA^\setB$ representing the closing of a set $\setA$ with respect to a set $\
     && \text{by \prefp{def:mph_open}}
 \end{align*}
 \end{proof}
-
-
-
 
 %---------------------------------------
 \begin{example}
@@ -1140,7 +1125,6 @@ $\setA$ & $\opT_{(-2, 1)}\setA$ & $-\setA$
 %\end{center}
 }
 \end{example}
-
 
 %---------------------------------------
 \begin{example}
@@ -1236,7 +1220,4 @@ $\setA$ & $A_{(-3,-2)}$ & $\check{\setA}$
 %\end{center}
 }
 \end{example}
-
-
-
 
