--- a/common/netdet.tex
+++ b/common/netdet.tex
@@ -207,8 +207,7 @@ as illustrated to the right.
 %---------------------------------------
 \begin{proposition}
 %---------------------------------------
-Let $+$ represent \hie{Minkowski addition}%
-  %\footnote{\hie{Minkowski addition}: \prefpp{def:minkowski_add}, \prefpp{def:sub_add}}
+Let $+$ represent \ope{Minkowski addition}\ifsxref{morph}{def:minkowski_add}.
 \propbox{
   \opD = \opD_x + \opD_y
   }
